--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm install",
-    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
+    "start": "web: node server.js"
   },
   "repository": {
     "type": "git",
